@@ -1,4 +1,4 @@
-import java.time.Duration
+import org.jetbrains.intellij.model.ProfilerName
 
 plugins {
     id 'org.jetbrains.intellij' version '1.3.0'
@@ -20,25 +20,13 @@ dependencies {
 
 intellij {
     version = '2021.3'
-    String snapshotsDir = "$rootDir/log/snapshots"
-    mkdir(snapshotsDir)
-    runIde {
-        plugins = ['com.jetbrains.performancePlugin:213.5744.122']
+    plugins = ['com.jetbrains.performancePlugin:213.5744.122']
+    performanceTest {
         args = ["$rootDir/test"]
-        jvmArgs = ["-Djdk.attach.allowAttachSelf=true",
-                   "-Dtestscript.filename=$rootDir/test/test.ijperf",
-                   "-DintegrationTests.profiler=async",
-                   "-Didea.is.integration.test=true",
-                   "-Dide.performance.screenshot.before.kill=$rootDir/log/screenshot_beforeKill.jpg",
-                   "-Djb.privacy.policy.text=<!--999.999-->",
-                   "-Djb.consents.confirmation.enabled=false",
-                   "-Didea.local.statistics.without.report=true",
-                   "-Dlinux.native.menu.force.disable=true",
-                   "-Didea.fatal.error.notification=true",
-                   "-Didea.log.path=$rootDir/log",
-                   "-Dsnapshots.path=$snapshotsDir"
-//               "-Dmemory.snapshots.path=$rootDir/log/memory_snapshots",
-        ]
+//        profilerName = ProfilerName.YOURKIT
+        testDataDir = "$rootDir/testData"
+        artifactsDir = "$rootDir/artifacts"
+//        snapshotsDir = "$rootDir/snapshots"
     }
 }
 
